--- a/src/esp/bindings/CMakeLists.txt
+++ b/src/esp/bindings/CMakeLists.txt
@@ -36,6 +36,17 @@ target_link_libraries(
          sim
 )
 
+if(BUILD_WITH_AUDIO)
+  add_custom_command(
+    TARGET habitat_sim_bindings
+    POST_BUILD
+    COMMAND
+      ${CMAKE_COMMAND} -E copy_if_different
+      ${DEPS_DIR}/audio/HabitatAcousticsPkg/libs/libHabitatAcoustics.so
+      $<TARGET_FILE_DIR:habitat_sim_bindings>
+  )
+endif()
+
 # target_include_directories(environment
 #   PUBLIC
 #     ${CMAKE_CURRENT_LIST_DIR}
