Addressing self review comments and running code formatting tools

--- a/src/esp/sensor/CMakeLists.txt
+++ b/src/esp/sensor/CMakeLists.txt
@@ -55,6 +55,9 @@ endif()
 
 if(BUILD_WITH_AUDIO)
   include_directories(${DEPS_DIR}/audio/HabitatAcousticsPkg/headers)
-  find_library(HabitatAcoustics_LIBRARY HabitatAcoustics PATHS ${DEPS_DIR}/audio/HabitatAcousticsPkg/libs)
+  find_library(
+    HabitatAcoustics_LIBRARY HabitatAcoustics
+    PATHS ${DEPS_DIR}/audio/HabitatAcousticsPkg/libs
+  )
   target_link_libraries(sensor PUBLIC ${HabitatAcoustics_LIBRARY})
 endif()
