--- a/src/esp/bindings/CMakeLists.txt
+++ b/src/esp/bindings/CMakeLists.txt
@@ -38,12 +38,9 @@ target_link_libraries(
 
 if(BUILD_WITH_AUDIO)
   add_custom_command(
-    TARGET habitat_sim_bindings
-    POST_BUILD
-    COMMAND
-      ${CMAKE_COMMAND} -E copy_if_different
-      ${RLRAudioPropagation_LIBRARY}
-      $<TARGET_FILE_DIR:habitat_sim_bindings>
+    TARGET habitat_sim_bindings POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${RLRAudioPropagation_LIBRARY}
+            $<TARGET_FILE_DIR:habitat_sim_bindings>
   )
 endif()
 
